--- a/.github/workflows/airflow-dags-test.yml
+++ b/.github/workflows/airflow-dags-test.yml
@@ -35,8 +35,8 @@ jobs:
       # install requirements and airflow
       - name: install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install flake8
+          # python -m pip install --upgrade pip
+          # pip install flake8
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Lint with flake8
