--- a/.github/workflows/airflow-dags-test.yml
+++ b/.github/workflows/airflow-dags-test.yml
@@ -35,7 +35,7 @@ jobs:
       # install requirements and airflow
       - name: install dependencies
         run: |
-          # python -m pip install --upgrade pip
+          python -m pip install --upgrade pip
           # pip install flake8
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
