--- a/.github/workflows/airflow-dags-test.yml
+++ b/.github/workflows/airflow-dags-test.yml
@@ -48,5 +48,5 @@ jobs:
           # flake8 dags/ --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Run pytest
         run: |
-          python3 tests/run_tests.py
+          python3 tests/dags/run_tests.py
         
